<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HackerrankStarter.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.HackerrankStarter.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/filter_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="5dp"
        android:text="@string/filter_all"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/employee_rv"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employee_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/add_employee_btn"
        app:layout_constraintTop_toBottomOf="@id/filter_tv"
        tools:listitem="@layout/item_employee" />

    <EditText
        android:id="@+id/employee_name_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/et_name_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/add_employee_btn"
        app:layout_constraintEnd_toStartOf="@id/employee_salary_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_employee_btn" />

    <EditText
        android:id="@+id/employee_salary_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/et_salary_hint"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/add_employee_btn"
        app:layout_constraintEnd_toStartOf="@id/add_employee_btn"
        app:layout_constraintStart_toEndOf="@id/employee_name_et"
        app:layout_constraintTop_toTopOf="@id/add_employee_btn" />

    <Button
        android:id="@+id/add_employee_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/clear_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_rv" />

    <Button
        android:id="@+id/clear_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clear_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
